--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <img src="images/linkedin.png" alt="linkedin" width="40px"/> Linkedin
       </a>
       
-      <a class="footer-link" href="https://twitter.com/MarvinNica19" target="_blank" rel="noopener noreferrer">
+      <a class="footer-link" href="https://twitter.com/helloworld_mz" target="_blank" rel="noopener noreferrer">
       <img src="images/twitter.png" alt="twitter" width="40px"/> Twitter
       </a>
 
